infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cortex
  labels:
    name: cortex
